force-app/main/default/objects/Team__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>Home City</label>    
    <type>Text</type>
    <length>36</length>
</CustomField>