force-app/main/default/objects/Team__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Team Name</label>    
    <required>true</required>
    <type>Text</type>
    <length>68</length>
</CustomField>