force-app/main/default/objects/Team__c/fields/Stadium__c.field-meta.xml
<CustomField>
    <fullName>Stadium__c</fullName>
    <label>Home Stadium</label>    
    <type>Text</type>
    <length>68</length>
</CustomField>