force-app/main/default/objects/Team__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Team Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Club</fullName>
                <default>true</default>
                <label>Club Team</label>
            </value>
            <value>
                <fullName>International</fullName>
                <label>International Team</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>